@@ -1,4 +1,4 @@
-/* $Id: proto.h,v 1.14 2001/12/09 13:59:04 ukai Exp $ */
+/* $Id: proto.h,v 1.15 2001/12/10 15:04:09 ukai Exp $ */
 /* 
  *   This file was automatically generated by version 1.7 of cextract.
  *   Manual editing not recommended.
@@ -235,7 +235,6 @@ extern int columnPos(Line *line, int column);
 extern Line *lineSkip(Buffer *buf, Line *line, int offset, int last);
 extern Line *currentLineSkip(Buffer *buf, Line *line, int offset, int last);
 extern int gethtmlcmd(char **s);
-extern char *getAnchor(char *arg, char **arg_return);
 extern Str checkType(Str s, Lineprop *oprop,
 #ifdef USE_ANSI_COLOR
 		     Linecolor *ocolor, int *check_color,
